--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 <div class="thumbs">
                     <div @click="slidersReturn" class="prev"></div>
                     <div @click="slidersAdd" class="next"></div>
-                    <div class="thumb active">
-                        <img src="img/01.webp" alt="Svezia" />
+                    <div class="thumb" v-for="(elem, i) in slides" :class="counter == i ? 'active' : ''">
+                        <img :src="elem.image" :alt="elem.title" />
                     </div>
-                    <div class="thumb">
+                    <!-- <div class="thumb">
                         <img src="img/02.webp" alt="Ratchet & Clank" />
                     </div>
                     <div class="thumb">
@@ -43,7 +43,7 @@
                     </div>
                     <div class="thumb">
                         <img src="img/05.webp" alt="Avengers" />
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
